Fix design discrepancies, align gatsby-browser.js to gatsby-ssr.js

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -154,4 +154,10 @@
     width: 100%;
     left: 0;
   }
+
+  /* Thinner underline animation */
+
+  .underline-animate-thin a::after {
+    height: 1px;
+  }
 }
